--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -3,22 +3,22 @@
   text-align: center;
 }
 .photo {
-  width: 250px;
-  margin: 20px auto;
+  width: 200px;
+  margin: 1rem auto;
 }
 .header h1 {
-  font-size: 60px;
+  font-size: 3rem;
   font-weight: 600;
 }
 .header h2 {
-  font-size: 30px;
+  font-size: 1.5rem;
   font-weight: 300;
   color: #f11ba9;
 }
 .header h3 {
   width: 70%;
-  font-size: 25px;
-  margin: 40px auto;
+  font-size: 1.5rem;
+  margin: 1rem auto;
 }
 
 .social a {
@@ -31,7 +31,7 @@
 }
 
 .stack {
-  padding: 100px 20px;
+  padding: 1rem 2rem;
   text-align: center;
 }
 .stack h3 {
