--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+
 html,
 body {
-  font-family: "Rubik", sans-serif;
-  font-weight: 400;
+  font-family: "Oswald", sans-serif;
   color: #1d1d1d;
 }
 
