--- a/styles/main.css
+++ b/styles/main.css
@@ -2,12 +2,12 @@
 
 html,
 body {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", sans-serif !important;
   color: #1d1d1d;
 }
 
 a {
-  color: inherit;
+  color: #1d1d1d;
   text-decoration: none;
 }
 
